--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>How to use</h1>
-
+    <p>Send a json request to https://mighty-river-05442.herokuapp.com/api</p>
 </body>
 </html>
